properеies now in yaml .idea/ and .mvn/ in gitignore Controllers -> rest @Controller -> @RESTController

--- a/endpoint/.gitignore
+++ b/endpoint/.gitignore
@@ -1,9 +1,9 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
-
+.idea/
+.mvn/
 ### STS ###
 .apt_generated
 .classpath
