Настроен Checkstyle. Теперь билд будет падать при наличие warning'ов

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
                     <linkXRef>false</linkXRef>
+                    <violationSeverity>warning</violationSeverity>
                 </configuration>
                 <executions>
                     <execution>
