--- a/system/pom.xml
+++ b/system/pom.xml
@@ -9,6 +9,8 @@
         <version>1.0.0</version>
     </parent>
 
+    <packaging>pom</packaging>
+
     <artifactId>system</artifactId>
     <version>1.0.0</version>
     <name>system</name>
