--- a/system/pom.xml
+++ b/system/pom.xml
@@ -14,6 +14,8 @@
     <name>system</name>
     <description>System module</description>
 
+    <packaging>pom</packaging>
+
     <properties>
         <java.version>11</java.version>
     </properties>
