--- a/telegram-bot/.gitignore
+++ b/telegram-bot/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
 .idea/
@@ -16,8 +17,9 @@ target/
 ### IntelliJ IDEA ###
 .idea
 *.iws
-*.ipr
 *.iml
+*.ipr
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
