--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>ru.studentsplatform</groupId>
         <artifactId>backend</artifactId>
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>endpoint</artifactId>
-    <version>1.0.0</version>
+    <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <java.version>11</java.version>
-    </properties>
+    <artifactId>endpoint</artifactId>
 
     <dependencies>
         <!-- Modules App -->
         <dependency>
-            <groupId>university</groupId>
+            <groupId>ru.studentsplatform</groupId>
             <artifactId>university</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
