--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>ru.studentsplatform</groupId>
+        <artifactId>backend</artifactId>
+        <version>1.0.0</version>
     </parent>
-    <groupId>entities</groupId>
+
+    <modelVersion>4.0.0</modelVersion>
+
     <artifactId>entities</artifactId>
-    <version>1.0.0</version>
-    <name>entities</name>
-    <description>entities repository</description>
-
-    <packaging>pom</packaging>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -43,14 +34,4 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
