--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>entities</module>
         <module>university</module>
         <module>vk-bot</module>
+        <module>domain</module>
+        <module>service</module>
     </modules>
 
     <parent>
@@ -39,6 +41,13 @@
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
