--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>domain</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+        </dependency>
     </dependencies>
+
 </project>
