--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,20 @@
                 <version>1.13.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.7.0-M1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.13.3</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
