Telegram bot - сырая реализация. Конструктор с Url парсера удалён в пользу метода setConnection.

--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>ru.studentsplatform</groupId>
-            <artifactId>service</artifactId>
+            <artifactId>telegram-bot</artifactId>
             <version>1.0.0</version>
         </dependency>
 
