--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>ru.studentsplatform</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -21,6 +27,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.9</version>
         </dependency>
     </dependencies>
 </project>
