--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -16,7 +16,13 @@
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>university</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.studentsplatform</groupId>
+            <artifactId>service</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
