--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,14 +14,13 @@
     <dependencies>
         <!-- Modules App -->
         <dependency>
-            <groupId>ru.studentsplatform</groupId>
-            <artifactId>domain</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
