Убраны неиспользуещиеся файлы. Мини-правка одного метода. Написаны тесты вокруг бота (но не для самого бота). Библиотека для тестирования добавлена в модуль.

--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -34,5 +34,11 @@
             <artifactId>telegrambots</artifactId>
             <version>4.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
