--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -9,6 +9,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>pom</packaging>
+
     <artifactId>domain</artifactId>
 
     <dependencies>
