--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <lombok.version>1.18.12</lombok.version>
         <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
         <micrometer-registry-prometheus.version>1.5.2</micrometer-registry-prometheus.version>
+        <jsop.version>1.13.1</jsop.version>
+        <junit-jupiter-api.version>5.7.0-M1</junit-jupiter-api.version>
+        <log4j.version>2.13.3</log4j.version>
     </properties>
 
     <modules>
@@ -71,23 +74,21 @@
             <dependency>
                 <groupId>org.jsoup</groupId>
                 <artifactId>jsoup</artifactId>
-                <version>1.13.1</version>
+                <version>${jsop.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-api</artifactId>
-                <version>5.7.0-M1</version>
+                <version>${junit-jupiter-api.version}</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
-                <version>2.13.3</version>
+                <version>${log4j.version}</version>
             </dependency>
-
-
         </dependencies>
     </dependencyManagement>
 
