Безжалостно вырезанный модуль телеги возвращается на своё законное место. Добавлен класс HtmlDocumentBuilder с единственным методом, возвращающим документ по url. Упрощена работа UrlFinder'а. Проперти переехали в endpoint properties.

--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -20,6 +20,12 @@
         </dependency>
 
         <dependency>
+            <groupId>ru.studentsplatform</groupId>
+            <artifactId>telegram-bot</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
