--- a/vk-bot/pom.xml
+++ b/vk-bot/pom.xml
@@ -28,5 +28,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.petersamokhin</groupId>
+            <artifactId>vk-bot-java-sdk</artifactId>
+            <version>0.1.3</version>
+        </dependency>
     </dependencies>
 </project>
