Сделал автовайр бинов в Factory, пощуупал Mockito

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,11 @@
     <dependencies>
         <!-- Modules App -->
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
         </dependency>
