--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <jsop.version>1.13.1</jsop.version>
         <junit-jupiter-api.version>5.7.0-M1</junit-jupiter-api.version>
         <log4j.version>2.13.3</log4j.version>
+        <mockito.version>3.4.0</mockito.version>
     </properties>
 
     <modules>
@@ -88,6 +89,12 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
