--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <junit-jupiter-api.version>5.7.0-M1</junit-jupiter-api.version>
         <log4j.version>2.13.3</log4j.version>
         <mockito.version>3.4.0</mockito.version>
+        <telegrambot.version>4.9</telegrambot.version>
     </properties>
 
     <modules>
@@ -95,6 +96,18 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots</artifactId>
+                <version>${telegrambot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots-abilities</artifactId>
+                <version>${telegrambot.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
