Настройка Codecov Fix v3

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
+    - uses: actions/checkout@master
     - name: Upload coverage to Codecov
     - uses: codecov/codecov-action@v1
       with:
