--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -50,6 +50,12 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.14</version>
+        </dependency>
     </dependencies>
 
     <build>
