--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -9,3 +9,10 @@ management:
       show-details: always
 
 mail.debug: true
+
+spring:
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://localhost:5432/testdb
+    username: postgres
+    password: postgres
