--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
         <micrometer-registry-prometheus.version>1.5.2</micrometer-registry-prometheus.version>
         <vk-bot-java-sdk.version>0.1.3</vk-bot-java-sdk.version>
+        <postgresql.version>42.2.14</postgresql.version>
     </properties>
 
     <modules>
