--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
                 <artifactId>vk-bot-java-sdk</artifactId>
                 <version>${vk-bot-java-sdk.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
