--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -13,6 +13,6 @@ mail.debug: true
 spring:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/testdb
+    url: jdbc:postgresql://studplatform-database.ctzczhzrzupg.eu-west-2.rds.amazonaws.com/testDB
     username: postgres
-    password: postgres
+    password: password256
