API расписания СПБГУ
1) Убран код из телеграм-бота по просьбе Павла
2) Добавлен SpbuScheduleResolver, который получает расписание с помощью API расписания СПБГУ. Все с этим связанное теперь в ru.studentsplatform.backend.service.spbu_new. Старое по просьбе Павла лежит аналогично в папке spbu.
3) Поправлен кодстайл
4) Добавлен 1 тест, который тестит получение расписания за неделю

--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -16,12 +16,18 @@
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>university</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>telegram-bot</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.studentsplatform</groupId>
+            <artifactId>service</artifactId>
             <version>${project.version}</version>
         </dependency>
 
