--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 management:
   endpoints:
     web:
@@ -7,3 +8,5 @@ management:
   endpoint:
     health:
       show-details: always
+server:
+  port: 8081
