Добавлены некоторые DTO и абстрактный контроллер.

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>entities</artifactId>
             <version>1.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
