Исправлены импорты согласно checkstyle, правки в классах UserDTO и UniversityDTO. Mapstruct подключен в endpoint.

--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -56,6 +56,15 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
