B-37 Log in browser and history log

--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -24,3 +24,8 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+
+logging:
+  file:
+    name: "log"
+  config: "classpath:logback-spring.xml"
