--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,26 +16,26 @@
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>domain</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
-
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>system</artifactId>
             <version>${project.version}</version>
         </dependency>
 
+        <!-- Spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
+        <!-- Spring Email -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
