Телеграм-бот с машиной состояний, рабочая версия.
В дальнейшем требуется рефакторинг кода, участки помечены TODO-аннотацией.

--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -9,5 +9,7 @@ spring:
     port: 465
     protocol: smtps
 
+  parser:
+    baseUrl: https://timetable.spbu.ru/
 #must be false in production
 mail.debug: true
