--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -61,7 +61,14 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+
+        <!-- Telegram-bot-->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
