--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <vk-bot-java-sdk.version>0.1.3</vk-bot-java-sdk.version>
         <postgresql.version>42.2.14</postgresql.version>
         <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <mapstruct-pocessor.version>1.3.1.Final</mapstruct-pocessor.version>
     </properties>
 
     <modules>
@@ -105,13 +107,13 @@
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
-                <version>1.3.1.Final</version>
+                <version>${mapstruct.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
-                <version>1.3.1.Final</version>
+                <version>${mapstruct-pocessor.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
