add migration dependency and configuration, set up mvn-flyway-plugin

--- a/endpoint/pom.xml
+++ b/endpoint/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>vk-bot</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.studentsplatform</groupId>
+            <artifactId>migration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
