--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <vk-bot-java-sdk.version>0.1.3</vk-bot-java-sdk.version>
         <postgresql.version>42.2.14</postgresql.version>
         <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
+        <flyway.version>6.5.2</flyway.version>
     </properties>
 
     <modules>
@@ -28,6 +29,7 @@
         <module>vk-bot</module>
         <module>domain</module>
         <module>service</module>
+        <module>migration</module>
     </modules>
 
     <parent>
