--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,16 @@
         <micrometer-registry-prometheus.version>1.5.2</micrometer-registry-prometheus.version>
         <vk-bot-java-sdk.version>0.1.3</vk-bot-java-sdk.version>
         <postgresql.version>42.2.14</postgresql.version>
+        <jsop.version>1.13.1</jsop.version>
+        <junit-jupiter-api.version>5.7.0-M1</junit-jupiter-api.version>
+        <log4j.version>2.13.3</log4j.version>
+        <mockito.version>3.4.0</mockito.version>
+        <telegrambot.version>4.9</telegrambot.version>
         <springfox-swagger2.version>2.6.1</springfox-swagger2.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <mapstruct-pocessor.version>1.3.1.Final</mapstruct-pocessor.version>
         <flyway.version>6.5.2</flyway.version>
+        <springstatemachine.version>2.2.0.RELEASE</springstatemachine.version>
     </properties>
 
     <modules>
@@ -59,6 +65,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-test</artifactId>
                 <version>${spring-boot.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.statemachine</groupId>
+                <artifactId>spring-statemachine-core</artifactId>
+                <version>${springstatemachine.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.statemachine</groupId>
+                <artifactId>spring-statemachine-test</artifactId>
+                <version>${springstatemachine.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -116,6 +135,53 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct-pocessor.version}</version>
+            </dependency>
+
+            <!-- Telegram-bot -->
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambotsextensions</artifactId>
+                <version>${telegrambot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots</artifactId>
+                <version>${telegrambot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.telegram</groupId>
+                <artifactId>telegrambots-abilities</artifactId>
+                <version>${telegrambot.version}</version>
+            </dependency>
+
+            <!-- HTML-parsing-->
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsop.version}</version>
+            </dependency>
+
+            <!-- Test -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit-jupiter-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- Logger -->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
