fix some issues, change migration .sql script to updated one

--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -19,7 +19,10 @@
             <artifactId>flyway-core</artifactId>
             <version>${flyway.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
