Кроме телеграм-бота, был создан сервис и обвязка для сущности PlaceStudy.
Согласно указаниям внесены изменения в конфиг migration.

Добавления в pom-никах различных модулей для работы.

--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
             non_contextual_creation: true
     show-sql: false
   flyway:
-    enabled: true
+    enabled: false
     baseline-on-migrate: true
     baseline-version: 0
 
