--- a/endpoint/src/main/resources/application.yml
+++ b/endpoint/src/main/resources/application.yml
@@ -30,8 +30,8 @@ spring:
     baseline-version: 0
   mvc:
     throw-exception-if-no-handler-found: true
-  resources:
-    add-mappings: false
+#  resources:
+#    add-mappings: false
 
 logging:
   file:
