Изменён EndpointApplication для большей красоты, изменена пакетная структура ТГ-бота, небольшая работа с конфигурацией. Удалены лишние зависимости.
Немного изменена команда \schedule бота до лучших времён.

--- a/telegram-bot/pom.xml
+++ b/telegram-bot/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>ru.studentsplatform</groupId>
             <artifactId>service</artifactId>
-            <version>1.0.0</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -35,6 +35,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
@@ -43,11 +49,6 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.telegram</groupId>
-            <artifactId>telegrambots-abilities</artifactId>
         </dependency>
 
         <dependency>
