--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -27,6 +27,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.n2oapp.criteria</groupId>
+            <artifactId>criteria-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
