--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <mapstruct-pocessor.version>1.3.1.Final</mapstruct-pocessor.version>
         <flyway.version>6.5.2</flyway.version>
         <springstatemachine.version>2.2.0.RELEASE</springstatemachine.version>
+        <criteria.version>7.8.0</criteria.version>
     </properties>
 
     <modules>
@@ -177,6 +178,14 @@
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/net.n2oapp.criteria/criteria-api -->
+            <dependency>
+                <groupId>net.n2oapp.criteria</groupId>
+                <artifactId>criteria-api</artifactId>
+                <version>${criteria.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
