Исправлен плагин querydsl

--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -39,5 +39,9 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
