Убраны лишние аннотации из EndpointApplication Добавлена необходимая аннотация в ScheduleUserCellControllerImpl Версия queryDsl вынесена наверх Добавлены комментраии в POM Убран ненужный кастомазер в TaskRepository Логика ScheduleUserCell getFilteredPercentage вынесена из контроллера в сервис. На метод написан тест.

--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -39,6 +39,8 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+
+        <!-- Позволяет генерировать query объекты для использования в запросах -->
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-core</artifactId>
